k8s/prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prasanth-prod
  labels:
    environment: prod
